--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage":"http://sabinkandel.github.io/portfolio-website",
-  "name": "my-appssss",
+  "homepage": "http://sabinkandel.github.io/portfolio-website",
+  "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
